Fixes brewery view on mobile.

--- a/app/assets/stylesheets/controller/pages/brewery.scss
+++ b/app/assets/stylesheets/controller/pages/brewery.scss
@@ -17,7 +17,7 @@
 }
 
 @media screen and (max-width: 500px) {
-  #tasting-room {
+  #brewery {
     img {
       max-width: 100%;
       margin: 0px 0px 15px 0px;
