--- a/app/assets/stylesheets/shared/header.scss
+++ b/app/assets/stylesheets/shared/header.scss
@@ -86,7 +86,7 @@ header {
   }
 
   &.small-header.stuck {
-    opacity: 0.85;
+    opacity: 0.875;
 
     .container {
       padding-top: 0px;
